Ran a 3D simulation and visualized results using ParaView

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 This code implements the Shan and Chen (1993) model for a 3D, periodic domain.
 
 Output is written to files using XDMF/HDF5 format and can be visualized using ParaView.
+
+A python script is used to combine data from different time steps in one meta-file (light data).
